--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Saikat Das</a></h1>
+					<h1 id="logo"><a href="images/avatar.jpg">Saikat Das</a></h1>
 					<p>I am a student & learning web developing<br />
 					and now I'm beginner</p>
 				</header>
